--- a/.github/workflows/deploy.txt.yml
+++ b/.github/workflows/deploy.txt.yml
@@ -9,10 +9,8 @@ env:
   MONGODB_DB_NAME: gha-demo
 jobs:
   test:
-    environment: QA
+    environment: testing
     runs-on: ubuntu-latest
-    container:
-      image: node:16
     env:
       MONGODB_CONNECTION_PROTOCOL: mongodb+srv
       MONGODB_CLUSTER_ADDRESS: cluster0.vdrjqqx.mongodb.net
